// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedPopper styles sets default styles 1`] = `
.emotion-0 {
  background-color: #fff;
  box-shadow: rgba(0,0,0,0.28) 0 2px 13px 0;
}

<div
  className="emotion-0"
>
  <div>
    children
  </div>
</div>
`;

exports[`EnhancedPopper styles uses passed styles 1`] = `
.emotion-0 {
  background-color: backgroundColor;
  min-height: 3px;
  min-width: 2px;
}

<div
  className="emotion-0"
>
  <div>
    children
  </div>
</div>
`;
